Added to styling to try and center content

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,12 @@ body {
 
 .music-container {
     display: flex;
-    align-items: center;
     flex-direction: row;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    align-items: center;
 }
 
 .searchbar {
